// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DisplayBox Component Matches the 'with icon' snapshot 1`] = `
<div
  className="display-box grey-background"
>
  <div
    className="display-icon"
  >
    <svg
      fill="currentColor"
      height={32}
      size={32}
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width={32}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
      />
    </svg>
  </div>
  <div
    className="display-element"
  >
    <table>
      <thead>
        <tr>
          <th
            colSpan="2"
          >
            
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            BCeID
          </td>
          <td>
            bobross42
          </td>
        </tr>
        <tr>
          <td>
            Last Name
          </td>
          <td>
            Ross
          </td>
        </tr>
        <tr>
          <td>
            First Name
          </td>
          <td>
            Bob
          </td>
        </tr>
        <tr>
          <td>
            Email Address
          </td>
          <td>
            bob.ross@example.com
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`DisplayBox Component Matches the 'without icon' snapshot 1`] = `
<div
  className="display-box grey-background"
>
  <div
    className="display-icon"
  />
  <div
    className="display-element"
  >
    <table>
      <thead>
        <tr>
          <th
            colSpan="2"
          >
            
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            BCeID
          </td>
          <td>
            bobross42
          </td>
        </tr>
        <tr>
          <td>
            Last Name
          </td>
          <td>
            Ross
          </td>
        </tr>
        <tr>
          <td>
            First Name
          </td>
          <td>
            Bob
          </td>
        </tr>
        <tr>
          <td>
            Email Address
          </td>
          <td>
            bob.ross@example.com
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`DisplayBox Component Matches the blue-background snapshot 1`] = `
<div
  className="display-box blue-background"
>
  <div
    className="display-icon"
  >
    <svg
      fill="currentColor"
      height={32}
      size={32}
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width={32}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
      />
    </svg>
  </div>
  <div
    className="display-element"
  >
    <table>
      <thead>
        <tr>
          <th
            colSpan="2"
          >
            
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            BCeID
          </td>
          <td>
            bobross42
          </td>
        </tr>
        <tr>
          <td>
            Last Name
          </td>
          <td>
            Ross
          </td>
        </tr>
        <tr>
          <td>
            First Name
          </td>
          <td>
            Bob
          </td>
        </tr>
        <tr>
          <td>
            Email Address
          </td>
          <td>
            bob.ross@example.com
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
